# Furia-Challenge-2

./: README.md  alembic.ini  app.db  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: f8703ec1fef8_criando_tabela_de_fas.py
rotas/: fans.py
